# titanic-mlp

./: README.md  pyproject.toml  requirements.txt
data/: submission.csv  titanic_processed.csv
models/: titanic_mlp_v1.pth
notebook/: 0-titanic-data-exploration.ipynb  1-mlp-model.ipynb  2-training.ipynb
titanic_mlp/: mlp.py
